--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --respawn src/server.ts",
     "build": "tsc",
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "seed": "ts-node seed/importQuestions.ts"
   },
   "keywords": [],
   "author": "",
@@ -19,9 +20,11 @@
     "dayjs": "^1.11.19",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-rate-limit": "^8.2.1",
     "google-auth-library": "^10.5.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.2",
+    "node-cron": "^4.2.1",
     "zod": "^4.2.1"
   },
   "devDependencies": {
