--- a/mobile/app.json
+++ b/mobile/app.json
@@ -52,8 +52,7 @@
       [
         "react-native-google-mobile-ads",
         {
-          "androidAppId": "ca-app-pub-7561090708148190~3360649097",
-          "iosAppId": "ca-app-pub-7561090708148190~8055600243"
+          "androidAppId": "ca-app-pub-3226169062425843~7059881649"
         }
       ]
     ],
