--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
     "google-auth-library": "^10.5.0",
+    "googleapis": "^170.1.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.2",
     "node-cron": "^4.2.1",
