--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "dev": "ts-node-dev --respawn src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
-    "seed": "ts-node seed/importQuestions.ts"
+    "seed": "ts-node seed/importQuestions.ts",
+    "create-admin": "ts-node src/scripts/createAdmin.ts"
   },
   "keywords": [],
   "author": "",
